--- a/api/pom.xml
+++ b/api/pom.xml
@@ -12,7 +12,7 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>ru.netology</groupId>
+            <groupId>ru.netology.ivanovoleg</groupId>
             <artifactId>service</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
