--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,12 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>ru.netology.ivanovoleg</groupId>
-        <artifactId>App_Core_HT1.4_Builders_1</artifactId>
+        <artifactId>Core_HT1.4_Builders_1</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>api</artifactId>
     <packaging>jar</packaging>
+    <properties>
+        <java.version>18</java.version>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>ru.netology.ivanovoleg</groupId>
@@ -18,4 +23,6 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
+
 </project>
