--- a/db/pom.xml
+++ b/db/pom.xml
@@ -4,10 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>ru.netology.ivanovoleg</groupId>
-        <artifactId>App_Core_HT1.4_Builders_1</artifactId>
+        <artifactId>Core_HT1.4_Builders_1</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>db</artifactId>
     <packaging>jar</packaging>
+    <properties>
+        <java.version>18</java.version>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
+    </properties>
 </project>
